# project-status-sync

./: .gitignore  CLAUDE.md  RALPH.md  WORKPLAN.md  ccs.cabal  flake.nix  fourmolu.yaml
app/: Main.hs  Prompts.hs
docs/: README.md  design.md  plan.md  progress.md
docs/decisions/: 0000-template.md  0001-transcript-prefiltering.md
docs/diagrams/: event-storming.excalidraw  system-overview.excalidraw
docs/examples/: signal-available.json
docs/plans/: 2026-03-03-notes-repo-protocol-design.md
nix/configurations/nixos/claude-sandbox/: configuration.nix  default.nix
nix/devenvs/: default.nix
nix/microvm/: claude-sandbox.nix
nix/modules/devenv/: cabal-test.nix  haskell-development-skill.nix  session-tracking.nix
nix/modules/home-manager/ccs-session-end-hook/: default.nix
nix/modules/home-manager/haskell-development-skill/: default.nix
nix/modules/home-manager/project-status-sync/: default.nix
notes/: 2026-03-02-microvm-sandboxing-research.md
notes/handoffs/: 2026-03-01-spike-initial-artifacts.md  2026-03-02-infra-project-bootstrap.md  2026-03-02-ralph-loop-research.md  2026-03-03-microvm-abandoned.md  2026-03-03-microvm-nix-store-caching.md  2026-03-03-nixdir-configuration-fix.md  2026-03-03-notes-repo-protocol-design.md  2026-03-03-prompts-and-commit-discipline.md  2026-03-03-ralph-sandbox-exploration.md  2026-03-03-ralph-test-script.md  2026-03-03-session-tracking.md  2026-03-04-fix-haskell-skill-devenv.md  2026-03-04-haskell-development-skill.md  2026-03-04-phase-1.4-spec.md  2026-03-04-ralph-scripts-audit.md  2026-03-04-rio-refactor.md  2026-03-05-cabal-test-hook.md  2026-03-05-code-review-fixes.md  2026-03-05-haskell-skill-enrichment.md  2026-03-05-hook-registration-packaging.md  2026-03-05-quickcheck-property-tests.md  2026-03-05-sandbox-haskell-tools.md  2026-03-05-session-end-hook.md  2026-03-05-signal-format-and-project-id.md  2026-03-05-workplan-handoff-dedup.md  2026-03-06-aggregation-skeleton.md  2026-03-06-cli-scaffolding.md  2026-03-06-codify-review-learnings.md  2026-03-06-filter-thinking-blocks.md  2026-03-06-pre-filter-library.md  2026-03-06-record-event-tool.md  2026-03-08-aggregate-config-extraction.md  2026-03-08-aggregation-pipeline-wiring.md  2026-03-08-code-fence-stripping.md  2026-03-08-extraction-prompt-refinement.md  2026-03-08-mandatory-prompt-fields.md  2026-03-08-processing-flow-integration.md  2026-03-08-ralph-role-protocol.md  2026-03-08-review-gate-assessment.md  2026-03-08-status-synthesis-wiring.md  (+21 more)
notes/plans/: 2026-03-08-phase-2c2-pipeline-verification.md  2026-03-08-phase-3.4-quality-validation.md  2026-03-14-phase-6-production-audit-fixes.md
notes/proposals/: 2026-03-08-process-config-prompt-fields.md  2026-03-19-event-deduplication.md  2026-03-19-incremental-extraction.md  TEMPLATE.md
prompts/: handoff-generation.md  progress-entry.md  session-extraction.md  status-synthesis.md
scripts/: jsonl-to-summary-input.sh  ralph-loop-sandboxed.sh  ralph-loop.sh  ralph-msg.sh  ralph-oneshot.sh  ralph-test.sh  run-sandbox.sh  session-end-hook.sh
src/: CCS.hs
src/CCS/: Aggregate.hs  Event.hs  Filter.hs  Process.hs  Project.hs  Signal.hs
test/: Main.hs
