cabal-version: 2.4
name:          ccs
version:       0.1.0.0
synopsis:      Claude Conversation Sync - cross-session context awareness
build-type:    Simple

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

common extensions
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables

library
  import:           warnings, extensions
  hs-source-dirs:   src
  default-language: GHC2021
  exposed-modules:
    CCS
    CCS.Aggregate
    CCS.Event
    CCS.Filter
    CCS.Project
    CCS.Signal
  other-modules:    Paths_ccs
  autogen-modules:  Paths_ccs
  build-depends:
      base >= 4.17 && < 5
    , aeson
    , directory
    , filepath
    , process
    , rio
    , text
    , time

executable ccs
  import:           warnings, extensions
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.17 && < 5
    , ccs
    , optparse-applicative
    , rio
    , text

test-suite ccs-test
  import:           warnings, extensions
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.17 && < 5
    , QuickCheck
    , aeson
    , aeson-qq
    , ccs
    , rio
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , time
